# mailfeed

./: .gitignore  DEVELOPMENT.md  LICENSE  LICENSE copy  MANIFEST.in  README.md  TESTING.md  pyproject.toml
src/mailfeed/: __init__.py  config.py  email_service.py  html_normalizer.py  protocols.py  py.typed
