[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailfeed"
version = "0.1.1"
description = "Reusable library for sending HTML emails with images and attachments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Randall Rodakowski", email = "randall@orangeshovel.com"}
]
keywords = ["email", "html", "smtp", "newsletter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "lxml>=4.9.0",
    "lxml-html-clean>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/rrodakowski/mailfeed"
Repository = "https://github.com/rrodakowski/mailfeed"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mailfeed = ["py.typed"]
